--- a/tigamap/static/tigamap/tigamap_legend.css
+++ b/tigamap/static/tigamap/tigamap_legend.css
@@ -165,9 +165,8 @@ body {
 
 #hand-left {
     opacity: 1;
-    position: absolute;
-    right: 35px;
-    bottom: 10px;
+    position: relative;
+    float: right;
 
     -moz-transition: opacity 2s ease;
     -webkit-transition: opacity 2s ease;
@@ -199,9 +198,11 @@ body {
 
 .legend-main-table-container {
     max-width: 50px;
-    position: absolute;
-    right: 50px;
-    top: 10px;
+    position: relative;
+    float: right;
+    margin-right: 55px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .legend-main-table {
