--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -481,12 +481,14 @@
 
                 var this_id = "{{ form.instance.id }}";
 
-                var hidden_form_fields{{ form.instance.id }} = $("input[name=photo_to_display_report_{{ form.instance.report.version_UUID }}], #" + "{{ form.edited_user_notes.auto_id }}, #" + "{{ form.message_for_user.auto_id }}, #" + "{{ form.linked_id.auto_id }}, #" + "{{ form.status.auto_id }}, #" + "{{ form.site_certainty_notes.auto_id }}, #" + "{{ form.site_certainty_category.auto_id }}, #" + "{{ form.tiger_certainty_notes.auto_id }}, #" + "{{ form.tiger_certainty_category.auto_id }}, #clear_button_{{ form.instance.id }}, #" + validation_complete_id_{{ form.instance.id }});
+                var hidden_form_fields{{ form.instance.id }} = $("{{ form.edited_user_notes.auto_id }}, #" + "{{ form.message_for_user.auto_id }}, #" + "{{ form.linked_id.auto_id }}, #" + "{{ form.status.auto_id }}, #" + "{{ form.site_certainty_notes.auto_id }}, #" + "{{ form.site_certainty_category.auto_id }}, #" + "{{ form.tiger_certainty_notes.auto_id }}, #" + "{{ form.tiger_certainty_category.auto_id }}, #" + validation_complete_id_{{ form.instance.id }});
+                var hidden_photo_fields{{ form.instance.id }} = $("input:radio[name=photo_to_display_report_" + "{{ form.instance.report.version_UUID }}" + "], #clear_button_" + "{{ form.instance.id }}");
 
 
 
                 var revise_btn = $("#revise_btn_" + this_id).click(function () {
                     hidden_form_fields{{ form.instance.id }}.parent().parent().slideDown('slow');
+                    hidden_photo_fields{{ form.instance.id }}.show();
                     $("#" + revise_id_{{ form.instance.id }}).val(true);
                     $("#" + validation_complete_id_{{ form.instance.id }}).prop('checked', false);
                 });
@@ -499,6 +501,7 @@
                         $("#" + validation_complete_id_{{ form.instance.id }}).prop('checked', false);
                     } else {
                         hidden_form_fields{{ form.instance.id }}.parent().parent().slideUp('slow');
+                        hidden_photo_fields{{ form.instance.id }}.hide();
                         $("#" + revise_id_{{ form.instance.id }}).val(false);
                         $("#" + validation_complete_id_{{ form.instance.id }}).prop('checked', true);
                     }
@@ -506,9 +509,11 @@
 
                 {% if form.instance.revise %}
                     hidden_form_fields{{ form.instance.id }}.parent().parent().show();
+                  hidden_photo_fields{{ form.instance.id }}.show();
                     revise_btn.addClass('active');
                 {% else %}
                     hidden_form_fields{{ form.instance.id }}.parent().parent().hide();
+                  hidden_photo_fields{{ form.instance.id }}.hide();
                 {% endif %}
 
                 {% if form.instance.validation_complete and not form.instance.revise %}
