page and score bugs

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -548,7 +548,7 @@
            value="{{ load_new_reports }}">
     <input id="tasks_per_page_input" type="text" name="tasks_per_page" style="display: none;"
            value="{{ tasks_per_page }}">
-    <input id="next_page_input" type="text" name="next_page" style="display: none;"
+    <input id="next_page_input" type="text" name="page" style="display: none;"
            value="">
 
     </form>
