bug fix no restart needed

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -966,9 +966,9 @@
                 }
             });
 
-            {% if pending == 'complete' %}
+            {% if request.user.userstat.is_expert and pending == 'complete' %}
                 save_button.prop('disabled', true);
-            {% elif checked != 'unchecked' and edit_mode != 'edit' %}
+            {% elif request.user.userstat.is_superexpert and checked != 'unchecked' and edit_mode != 'edit' %}
                 save_button.prop('disabled', true);
             {% endif %}
 
