timeouts down to 120 and coverate updating off

--- a/tigamap/templates/tigamap/validated_report_map_filterable.html
+++ b/tigamap/templates/tigamap/validated_report_map_filterable.html
@@ -716,7 +716,8 @@ function map_init_basic(map, options) {
     }
 
 
-    update_coverage_data();
+// TURNING OFF FOR NOW UNTIL WE WORK OUT THE LONG REQUEST ISSUE
+//    update_coverage_data();
 
 }
 
