--- a/tigamap/static/tigamap/tigamap_legend.css
+++ b/tigamap/static/tigamap/tigamap_legend.css
@@ -51,7 +51,6 @@ body {
     vertical-align: middle;
 }
 
-
 .color-box {
     width: 100%;
     text-align: center;
@@ -93,7 +92,6 @@ body {
     text-decoration: none;
 }
 
-
 .orange {
     color: black;
     background-color: orange;
@@ -103,7 +101,6 @@ body {
     color: black;
     text-decoration: none;
 }
-
 
 .note-div {
     font-size: .9em;
@@ -137,7 +134,6 @@ body {
     -webkit-transition: width .6s ease;
     transition: width .6s ease;
 }
-
 
 .legend, .site_legend {
     background-color: rgb(200, 200, 200);
@@ -280,4 +276,70 @@ body {
     vertical-align: middle;
     padding-left: 5px !important;
     border: none !important;
+}
+
+@media (max-width: 700px), (max-height: 550px) {
+    .legend, .site_legend, .coverage_legend {
+        display: none;
+    }
+
+    #hand-left {
+        display: none;
+    }
+
+    #more_info_div {
+        display: none;
+    }
+
+    #more_info_button {
+        display: none;
+    }
+
+    .legend-main-table {
+        display: none;
+    }
+
+    .legend-main-table, .legend-main-table tr, .legend-main-table td {
+        display: none;
+    }
+
+    .legend-popup-area {
+        display: none;
+    }
+
+    .legend-popup {
+        display: none;
+    }
+
+    .legend-popup-table {
+        display: none;
+    }
+
+    .legend-popup-table td {
+        display: none;
+    }
+
+    .legend-popup-table a {
+        display: none;
+    }
+
+    .legend-popup-infodiv {
+        display: none;
+    }
+
+    .info-button-background {
+        display: none;
+    }
+
+    .info-button-background img {
+        display: none;
+    }
+
+    .infodiv-table {
+        display: none;
+    }
+
+    .infodiv-table td {
+        display: none;
+    }
 }
